--- a/portfolio.html
+++ b/portfolio.html
@@ -15,20 +15,27 @@
 <body>
     <!-- head_of_the_site -->
 <header>
-    <nav>
-        <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+<div class="container-nav">
 
-        <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="Contacts" class="link">Контанкты</a></li>
+        <nav>
+            <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
+                    class="logo-studio">Studio</span></a>
+
+            <ul class="site-nav list">
+                <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="item"><a href="Contacts" class="link">Контанкты</a></li>
+            </ul>
+        </nav>
+
+        </div>
+          <div class="container-nav">
+        <ul class="auth-nav list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="link">+38096111111</a></li>
         </ul>
-    </nav>
-    <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38096111111</a></li>
-    </ul>
-</header>
+        </header>
+         </div>
 
     <!-- Buttons_for_flters_on_site -->
     <section class="filter-buttons">
