додає флекс ЦСС до меню Студія

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
 
     <!-- section_about -->
-        <div class="container">
+        <div class="container-about">
     <section class="section list">
         <ul class="list">
             <li><h3 class="section-title">Внимание к деталям</h3> <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p></li>
