--- a/portfolio.html
+++ b/portfolio.html
@@ -14,28 +14,35 @@
 </head>
 <body>
     <!-- head_of_the_site -->
-<header>
-<div class="container-nav">
+<div class="container-heder">
+    <div class="container-nav">
 
-        <nav>
-            <a class="full-logo" href="./index.html"><span class="logo-web">Web</span><span
-                    class="logo-studio">Studio</span></a>
+        <header>
+            <nav class="main">
+                <a class="full-logo" href="./index.html">
+                    <div class="logo-web">Web</div>
+                    <div class="logo-studio">Studio</div>
+                </a>
 
-            <ul class="site-nav list">
-                <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li class="item"><a href="Contacts" class="link">Контанкты</a></li>
-            </ul>
-        </nav>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="Contacts" class="link">Контанкты</a></li>
+                </ul>
+            </nav>
 
-        </div>
-          <div class="container-nav">
+    </div>
+
+    <div class="container-auth">
+
         <ul class="auth-nav list">
             <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li class="item"><a href="tel:+380961111111" class="link">+38096111111</a></li>
         </ul>
+
         </header>
-         </div>
+    </div>
+</div>
 
     <!-- Buttons_for_flters_on_site -->
     <section class="filter-buttons">
